# Expedition

./: .gitignore  expedition-design-doc.md
.claude/: settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: deploy.yml
.swarm/: memory.db  schema.sql  state.json
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  config.ts  index.css  main.tsx
docs/: connection-issues-review.md
docs/plans/: 2026-03-09-expedition.md  2026-03-10-execution-index.md  2026-03-10-exp-010-014-github-issue-templates.md  2026-03-10-exp-013-frontend-client-implementation-spec.md  2026-03-10-exp-020-024-github-issue-templates.md  2026-03-10-exp-030-035-github-issue-templates.md  2026-03-10-exp-040-044-github-issue-templates.md  2026-03-10-exp-050-054-github-issue-templates.md  2026-03-10-exp-060-064-github-issue-templates.md  2026-03-10-productization-master-plan.md  2026-03-10-sprint-2-kickoff-runbook.md  2026-03-10-sprint-3-exp-020-024-roadmap.md  2026-03-10-sprint-3-kickoff-runbook.md  2026-03-10-sprint-4-exp-030-035-roadmap.md  2026-03-10-sprint-4-kickoff-runbook.md  2026-03-10-sprint-5-exp-040-044-roadmap.md  2026-03-10-sprint-5-kickoff-runbook.md  2026-03-10-sprint-6-exp-050-054-roadmap.md  2026-03-10-sprint-6-kickoff-runbook.md  2026-03-10-sprint-7-kickoff-runbook.md  (+11 more)
module/: Cargo.toml  describe-maincloud.json  package.json  tsconfig.json
module/src/: lib.rs  lib.ts
(+61 files in other folders)
