[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.0.3", features = ["unstable"] }
log = "0.4"
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
